gospel/test/negative/t9.mli

(*@ function rec f (x: bool) (y: int): bool = f y x *)

(* ERROR: cannot match int with bool *)
